updated the entire code

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,5 +1,6 @@
 .form-wrapper {
-	width: 50%;
+	width: 57%;
+	padding-left: 80px;
 }
 
 .blockquote,
@@ -12,9 +13,8 @@
 	padding: 30px 0;
 	padding: 15px 0;
 	width: 100%;
-	max-width: 500px;
 	z-index: 1;
-	margin: 60px auto;
+	margin: 81px auto;
 	align-self: center;
 	border-top: solid 1px #f78;
 	border-bottom: solid 1px #f78;
@@ -60,7 +60,6 @@
 	font-size: 10rem;
 	line-height: 0;
 	bottom: -43px;
-	/* right: 30px; */
 	right: -7px;
 	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
 }
@@ -69,11 +68,12 @@
 	color: #980369;
 }
 
-.blockquote h4,
-.blockquote1 h4 {
+.blockquote p,
+.blockquote1 p {
 	position: relative;
 	color: #000;
 	font-size: 1rem;
+	font-weight: bold;
 	line-height: 1;
 	margin: 0;
 	padding-top: 20px;
@@ -85,30 +85,27 @@
 		width: 0;
 	}
 	to {
-		width: 500px;
+		width: 100%;
 	}
 }
+
 
 @keyframes typingAnnex {
 	from {
 		width: 0;
 	}
 	to {
-		width: 500px;
+		width: 100%;
 	}
 }
 
-@keyframes caret {
-	50% {
-		color: transparent;
-	}
-}
 
 .form-wrapper__content {
 	margin: 25px auto;
 }
 
-.form {
+.form,
+.form1 {
 	position: relative;
 	width: 100%;
 	background: transparent;
@@ -117,7 +114,12 @@
 	transition: all .3s;
 }
 
-.search-input {
+.form1 {
+	height: 55px;
+}
+
+.search-input,
+.search-input1 {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -131,9 +133,16 @@
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.09);
 	background: #fff;
 	transition: all .3s;
+	z-index: 999;
 }
 
-.search-input:focus {
+.search-input1 {
+	border-radius: 4px;
+	padding: 0px 60px 0px 20px;
+}
+
+.search-input:focus,
+.search-input1:focus {
 	border: 1px solid #f78;
 	transition: all .3s;
 }
@@ -146,7 +155,8 @@
 }
 
 .btn,
-.btn1 {
+.btn1,
+.btn-search {
 	position: absolute;
 	top: 12%;
 	right: 1%;
@@ -158,8 +168,17 @@
 	outline: none;
 	box-shadow: 1px 7px 14px -9px rgb(254, 102, 125);
 	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: #fff;
 	z-index: 99999;
+}
+
+.btn-search {
+	top: 15%;
+	width: 40px;
+	height: 40px;
 }
 
 .btn1 {
@@ -168,17 +187,48 @@
 }
 
 .query {
-	padding-top: 30px;
+	padding: 10px;
+	margin: 15px;
+	border-radius: 5px;
+	font-size: 20px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+	letter-spacing: 0.2rem;
+	box-shadow: 0 10px 20px rgb(0 0 0 / 9%);
+	background-color: hsla(0, 0%, 100%, .6);
+	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
+	z-index: 9999;
 }
 
-/* @media only screen and (min-device-width: 20em) and (max-device-width: 30em) { */
-@media (min-width: 320px) and (max-width: 480px) {
+
+@media screen and (max-width: 540px) {
 	.form-wrapper {
 		width: 100%;
+		padding: initial;
 	}
 
 	.form-wrapper__content {
 		margin: -30px auto;
+	}
+
+	.form1 {
+		height: 45px;
+	}
+
+	.result-indicator {
+		width: 95%;
+	}
+
+	.search-input1 {
+		padding: 0px 45px 0px 20px;
+	}
+
+	.btn-search {
+		top: 12%;
+		width: 35px;
+		height: 35px;
 	}
 
 	.blockquote h2,
@@ -194,6 +244,7 @@
 	.blockquote,
 	.blockquote1 {
 		border-top: none;
+		margin: 60px auto;
 	}
 
 	.blockquote:after,
@@ -209,7 +260,8 @@
 	}
 
 	.query {
-		padding-top: 50px;
+		margin: 15px auto;
+		border-radius: 4px;
 	}
 
 	.blockquote h4,
@@ -218,10 +270,20 @@
 	}
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 540px) and (max-width: 780px) {
 	.nav-wrapper {
 		left: 2%;
 		width: 100%;
+	}
+
+	.form-wrapper {
+		padding-left: 20px;
+	}
+
+	.blockquote,
+	.blockquote1 {
+		border-top: none;
+		margin: 45px auto;
 	}
 
 	.typetext,
@@ -232,7 +294,7 @@
 	.blockquote:after,
 	.blockquote1:after {
 		color: salmon;
-		font-size: 7rem;
+		font-size: 5rem;
 		bottom: 30px;
 		right: -10px;
 	}
@@ -247,17 +309,32 @@
 	}
 
 	.query {
-		padding-top: 40px;
+		width: 95%;
+		margin: 15px auto;
 	}
 
 	.form-wrapper__content {
 		margin: -25px auto;
 	}
+
+	.form1 {
+		height: 45px;
+	}
+
+	.search-input1 {
+		padding: 0px 45px 0px 20px;
+	}
+
+	.btn-search {
+		top: 12%;
+		width: 35px;
+		height: 35px;
+	}
 }
 
-@media (min-width: 600px) and (max-width: 736px) {
+@media screen and (min-width: 781px) and (max-width: 1200px) {
 	.typetext,
 	.blockquote h2 {
-		font-size: 20px;
+		font-size: 19px;
 	}
 }
