--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,12 +1,53 @@
-.food-list__cardwrapper {
+.food-list__cardwrapper,
+.randomgenerator-cardwrapper {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	grid-gap: 2.5rem;
 	gap: 2.5rem;
-	padding: 30px 15px;
+	padding: 5px 15px;
 	background-color: lavender;
+}
+
+.search-input__wrapper {
+	position: relative;
+	width: 100%;
+	min-height: 300px;
+	padding: 0px 70px;
+	margin: 25px auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
+	background-color: lavender;
+	background-position: left;
+	background-size: cover;
+	background-repeat: no-repeat;
+	box-shadow: 0px 10px 20px rgb(0 0 0 / 9%);
+	animation: fade .5s;
+	transition: all .5s;
+}
+
+.result-indicator {
+	width: 100%;
+	margin: 25px auto;
+}
+
+.randomgenerator-content {
+	position: relative;
+	width: 100%;
+	margin: 15px 0px;
+	border-radius: 10px;
+}
+
+.randomgenerator-content h1 {
+	padding: 15px;
+}
+
+.randomgenerator-cardwrapper {
+	background-color: transparent;
 }
 
 .alcohol-caption {
@@ -24,7 +65,7 @@
 	background: #c62d1f;
 }
 
-ul.food-list__card {
+.food-list__card {
 	position: relative;
 	width: 21%;
 	border-radius: 5px;
@@ -43,29 +84,12 @@ ul.food-list__favcard {
 
 .food-list__poster {
 	width: 100%;
-	padding-bottom: 100%;
-	overflow: hidden;
 	display: block;
 	position: relative;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 }
 
-.food-list__poster img {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.optional-image {
-	width: 100%;
-	min-height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
 
 .title-discover {
 	padding: 10px;
@@ -89,7 +113,7 @@ ul.food-list__favcard {
 .btn-discover1 {
 	width: 100%;
 	font-size: 17px;
-	margin: 8px 0px;
+	margin: 8px 0px 0px;
 	line-height: 2rem;
 	cursor: pointer;
 	outline: none;
@@ -104,21 +128,19 @@ ul.food-list__favcard {
 }
 
 .btn-discover1 {
-	color: #cc208e;
+	color: #61045f;
 	background: transparent;
-	border-color: #cc208e;
+	border-color: #61045f;
 	box-shadow: 0px 10px 14px -13px #cc208e;
 }
 
 .btn-discover:hover {
-	box-shadow: 0px 0px 5px #fff;
 	color: #ffffff;
+	box-shadow: 0px 0px 5px #fff;
 }
 
 .btn-discover1:hover {
-	box-shadow: 0px 0px 5px #fff;
-	color: #61045f;
-	border-color: #61045f;
+	box-shadow: 0px 0px 5px #fff;	
 }
 
 .pagination {
@@ -190,14 +212,20 @@ ul.food-list__favcard {
 }
 
 
-@media (min-width: 320px) and (max-width: 480px) {
-	.food-list__cardwrapper {
-		grid-gap: 0.8rem;
-		gap: 0.8rem;
+@media screen and (max-width: 540px) {
+	.randomgenerator-content h1 {
+		font-size: 28px;
 	}
 
-	ul.food-list__card {
-		width: 48%;
+	.food-list__cardwrapper,
+	.randomgenerator-cardwrapper {
+		grid-gap: 0.8rem;
+		gap: 0.8rem;
+		padding: 0px 5px;
+	}
+
+	.food-list__card {
+		width: 47%;
 	}
 
 	.alcohol-caption {
@@ -241,12 +269,17 @@ ul.food-list__favcard {
 		margin: 0;
 		padding: 0 .2em;
 	}
+
+	.search-input__wrapper {
+		width: 95%;
+		padding: 5px;
+		margin: auto;
+	}
 }
 
-
-@media (min-width: 481px) and (max-width: 768px) {
-	ul.food-list__card {
-		width: 29%;
+@media screen and (min-width: 540px) and (max-width: 780px) {
+	.food-list__card {
+		width: 20%;
 	}
 
 	.alcohol-caption {
@@ -255,5 +288,10 @@ ul.food-list__favcard {
 
 	.alcohol-caption::before {
 		left: 25px;
+	}
+
+	.search-input__wrapper {
+		width: 95%;
+		margin: auto;
 	}
 }
