--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
+
 
 *,
 *::before,
@@ -15,6 +18,7 @@ html {
 	overflow-y: scroll;
 	width: 100%;
 	min-height: 100%;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -23,7 +27,7 @@ body {
 	font-size: 16px;
 	line-height: 1.5;
 	color: #000;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: lavender;
@@ -33,15 +37,23 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-a:link {
+a:link,
+a:active, 
+a:visited {
 	list-style: none;
 	text-decoration: none;
+	color: inherit;
 }
 
-a:active {
-	list-style: none;
-	text-decoration: none;
+.main-wrapper{
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;	
 }
+
+.main-content {
+	flex: 1;
+  }
 
 .container {
 	width: 1200px;
@@ -180,6 +192,16 @@ a:active {
 	}
 }
 
+@keyframes btnzoom1 {
+	0% {
+		transform: scale(0);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
+
 /*============= Gradient==============*/
 
 @-webkit-keyframes gradient {
@@ -203,5 +225,24 @@ a:active {
 	}
 	100% {
 		background-position: 0% 50%;
+	}
+}
+
+@keyframes scrollIndicator {
+	0% {
+		transform: translate(0);
+	}
+	50% {
+		transform: translate(0, 20px);
+	}
+	100% {
+		transform: translate(0);
+	}
+}
+
+
+@media (max-width: 1200px) {
+	.container {
+		width: 100%;
 	}
 }
