--- a/src/styles/random.css
+++ b/src/styles/random.css
@@ -1,19 +1,41 @@
-ul.random-list__card {
-	position: relative;
-	width: 50%;
-	padding: 15px;
+.random-list__card {
+	width: 100%;
+	height: 100%;
 	transition: all .3s;
 	list-style: none;
 }
 
+.image-details__wrapper {
+	width: 100%;
+	transition: all .3s;
+}
+
+.image-details {
+	width: 220px;
+	transition: all .3s;
+}
+
+.random-list__postertitle {
+	width: 100%;
+}
+
+.random-list__postertitle p {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
+.main-random__caption, .main-random__caption1  {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+
 .btn-random__pick,
 .btn-random__pick1 {
-	position: absolute;
-	top: -2.6%;
-	left: 77%;
-	width: 77%;
+	width: 50%;
 	font-size: 18px;
-	line-height: 2rem;
 	outline: none;
 	border: none;
 	text-decoration: none;
@@ -21,7 +43,10 @@ ul.random-list__card {
 	background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
 	box-shadow: 0px 10px 14px -14px rgb(254, 102, 125);
 	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-	transition: all .2s;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	transition: all .3s;
 }
 
 .btn-random__pick1 {
@@ -32,49 +57,47 @@ ul.random-list__card {
 	width: 100%;
 	padding-top: 20px;
 	border-radius: 50%;
+	transition: all .3s;
 }
 
 .random-list__poster img {
 	width: 100%;
-	min-height: 100px;
+	height: 100%;
 	border: 5px double whitesmoke;
 	object-fit: cover;
 	border-radius: 50%;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
+	animation: fade 1s;
 }
 
 .optional-image {
 	width: 100%;
-	min-height: 100%;
-	border: 6px double #fff;
+	height: 100%;
 	object-fit: cover;
 	border-radius: 50%;
 	border: 4px double #f5f5f5;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
 }
 
-.category {
+.title-button {
+	width: 100%;
+	overflow: hidden;
+}
+
+.category, .category1 {
 	font-size: 18px;
+	padding: 5px;
+	width: 50%;
 	display: block;
-	position: absolute;
-	left: 17px;
-	top: -2%;
-	padding: 0px 5px;
 	border-radius: 3px;
 	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
 }
 
-.random-title {
-	font-size: 18px;
-	text-transform: capitalize;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
-}
 
 .btn-random,
 .btn-random1 {
+	top: 310px;
+	left: 0px;
 	width: 100%;
 	font-family: 'Poppins', sans-serif;
 	font-size: 17px;
@@ -87,7 +110,6 @@ ul.random-list__card {
 	border-radius: 5px;
 	text-decoration: none;
 	box-shadow: 0px 10px 14px -10px rgb(254, 102, 67);
-	/* text-shadow: 0 3px 50px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23); */
 	background-color: transparent;
 	transition: all .2s;
 	text-shadow: 0px 0px 0px #ff5550;
@@ -115,84 +137,105 @@ ul.random-list__card {
 }
 
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 540px) {
+	
+	.main-random__caption, .main-random__caption1 {
+		padding: 5px;
+	}
+
+	.image-details__wrapper {
+		padding-top: 15px;
+	}
+
+	.image-details {
+		width: 100%;
+		display: flex;
+	}
+
+
+	.title-button {
+		flex-direction: column;
+		display: flex;
+		width: 70%;
+		padding: 0px 10px;
+		justify-content: center;
+	}
+
+
 	.random-list__poster {
 		width: 35%;
-		padding-top: 40px;
+		padding-top: 0px;
 		border-radius: 50%;
 	}
+
 
 	.random-list__poster img {
 		border: 2px solid #ffffff;
 	}
 
-	ul.random-list__card {
-		width: 100%;
-		padding: 0px 10px 0px 10px;
+
+	.random-list__card {
+		width: 100%; 
+		padding: 0px;
 		margin: 0px 0px -57px 0px;
 	}
 
-	ul.random-list__card p {
-		position: absolute;
-		top: 50px;
-		right: 0;
-		width: 135px;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-		overflow: hidden;
+
+	.random-list__postertitle {
+		top: 75%; 
+		left: initial;
+		right: 0px;
 	}
 
 	.btn-random__pick,
 	.btn-random__pick1 {
-		width: 100%;
-		left: 0;
-		top: 0;
-		padding-right: 5px;
-		color: #fff;
-		line-height: 2rem;
 		text-align: right;
-	}
-
-	.category {
-		position: absolute;
-		left: 0px;
-		top: 2%;
 		padding: 0px 5px;
-		color: #fff;
 	}
 
 	.btn-random,
 	.btn-random1 {
-		width: 100%;
+		left: initial;
+		right: 0px;
 		font-size: 15px;
-		margin-top: 5px;
 		line-height: 1.5rem;
-		position: absolute;
-		top: 50%;
-		width: 60%;
-		right: 0;
+		top: 100%;
 	}
 
-	.category {
-		top: 2%;
-	}
+
 }
 
 
-@media (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 540px) and (max-width: 780px) {
+
+	.main-random__caption {
+		padding: 5px;
+		color: #fff;
+		background: linear-gradient(90deg, rgba(254, 110, 124, 1) 0%, rgba(255, 161, 118, 1) 136%);
+	}
+
+	.main-random__caption1 {
+		padding: 5px;
+		color: #fff;
+		background-image: linear-gradient(to top, #cc208e 0%, #980369 100%);
+	}
+
+	.random-list__postertitle {
+		top: 204px;
+	}
+
+	.random-list__poster {
+		width: 76%;
+		padding-top: 5px;
+		border-radius: 50%;
+	}
+
 	.btn-random__pick {
-		width: 90%;
-		left: 68%;
-		top: -4.5%;
+		background: none;
 	}
 
 	.btn-random__pick1 {
-		left: 81%;
-		top: -4.5%;
+		background: none;
 	}
 
-	.category {
-		top: -4%;
-		left: -50px;
-	}
 }
