--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,87 +1,79 @@
 .welcome-wrapper {
-	width: 100%;
+	width: 95%;
+	margin: 3% auto;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	-webkit-animation: fade 1s;
 	animation: fade 1s;
 	transform: all .3s;
 }
 
-.welcome-content {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	border-radius: 10px;
-	background-color: whitesmoke;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
-}
-
-ul.welcome-text__content {
-	max-height: 100%;
-	font-size: 20px;
-	text-align: center;
-	padding: 50px;
-	border-radius: 5px;
-	text-shadow: 0 0px 3px #3b3e41;
-}
-
 .welcome-text {
-	/* position: relative; */
 	width: 50%;
-	height: 100%;
+	padding: 50px;
+	font-size: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
+	background-color: whitesmoke;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
+	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
+	font-family: 'Roboto Slab', serif;
+	transition: all .3s;
 }
 
-.welcome-text__content li h1 {
-	margin: .75em;
+.welcome-text h1 {
+	margin: 0.3em;
 	z-index: 8;
 }
 
-.welcome-text__content li:nth-child(1) h1 {
+.welcome-text h1:nth-child(1) {
 	-webkit-animation: textSlide .5s;
 	animation: textSlide .5s;
 }
 
-.welcome-text__content li:nth-child(2) h1 {
-	color: #ff5550;
+.welcome-text h1:nth-child(2) {
 	-webkit-animation: textSlide1 .5s;
 	animation: textSlide1 .5s;
 }
 
-.welcome-text__content li:nth-child(3) h1 {
+.welcome-text h1:nth-child(3) {
 	-webkit-animation: textSlide .5s;
 	animation: textSlide .5s;
 }
 
-.welcome-text__content li:nth-child(4) h1 {
-	color: #ff5550;
+.welcome-text h1:nth-child(4) {
+	color: #551a8b;
 	-webkit-animation: textSlide1 .5s;
 	animation: textSlide1 .5s;
 }
 
-.welcome-text__content li:nth-child(5) h1 {
+.welcome-text h1:nth-child(5) {
 	-webkit-animation: textSlide2 .5s;
 	animation: textSlide2 .5s;
 }
 
 .btn-welcome {
 	width: 100%;
-	font-family: 'Poppins', sans-serif;
+	font-family: inherit;
 	font-size: 18px;
+	font-weight: 500;
 	background-color: transparent;
 	cursor: pointer;
 	margin-top: 50px;
 	line-height: 2rem;
 	padding: 0px 10px;
 	text-decoration: none;
-	border: 2px solid #ff5550;
+	border: 2px solid #551a8b;
 	border-radius: 5px;
-	color: #ff5550;
-	text-shadow: -1px 0px 0px #ff5550;
-	box-shadow: 0px 10px 14px -13px rgb(254, 102, 125);
+	color: #551a8b;
+	letter-spacing: .1rem;
+	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
+	box-shadow: 0px 10px 14px -13px rgb(160, 102, 254);
 	-webkit-animation: btnzoom .5s;
 	animation: btnzoom .5s;
 }
@@ -91,109 +83,74 @@ ul.welcome-text__content {
 }
 
 .welcome-image {
-	position: relative;
 	width: 50%;
-	min-height: 666px;
+	background-color: lavender;
 	-webkit-animation: fade 1s;
 	animation: fade 1s;
-}
-
-.welcome-image img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-image: url(../image/wel.jpg);
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
 
-.welcome-text__mobile {
-	position: absolute;
-	width: 100%;
-	max-height: 100%;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
-	background-color: hsla(0, 0%, 100%, .25);
-	padding: 25px;
-	display: none;
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-	.welcome-content {
+@media screen and (max-width: 540px) {
+	.welcome-wrapper {
 		width: 100%;
-	}
-
-	ul.welcome-text__content {
-		width: 100%;
-		height: 100%;
-		padding: 10px;
-		font-size: 15px;
-		border-radius: 0px;
-		background-image: none;
-		background-color: hsla(0, 0%, 100%, .21);
-		/* box-shadow: 0 10px 20px rgba(0, 0, 0, .2); */
-	}
-
-	.welcome-text__content li h1 {
-		/* margin: 0.3em;
-		font-size: 38px; */
-		margin: 0.16em;
-		font-size: 40px;
-	}
-
-	.welcome-text__content li:nth-child(2) h1 {
-		color: #ff0000;
-		text-shadow: 0 1px 2px #663939;
-	}
-
-	.welcome-text__content li:nth-child(4) h1 {
-		color: #ff0000;
-		text-shadow: 0 1px 2px #663939;
+		margin: initial;
 	}
 
 	.welcome-text {
-		position: absolute;
+		position: relative;
 		width: 100%;
-		z-index: 99;
-		padding: initial;
+		color: #000;
+		padding: 28px;
+		border-radius: 0px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-image: url(../image/wel.jpg);
+		text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
+	}
+
+
+	.overley {
+		position: absolute;
+		width: 90%;
+		height: 95%;
+		top: 15px;
+		left: 18px;
+		border-radius: 4px;
+		box-shadow: 0 10px 20px rgb(0 0 0 / 9%);
+		background-color: hsla(0, 0%, 100%, .55);
 	}
 
 	.btn-welcome {
-		width: 100%;
 		font-size: 20px;
 		font-weight: 600;
-		line-height: 2.3rem;
-		color: #000; 
-		border-color: #000;
-		/* margin-top: 15px; */
-		margin: 15px 0px;
 		text-shadow: none;
-		/* box-shadow: -4px 8px 15px -26px #fff; */
+		z-index: 999;
 	}
 
 	.welcome-image {
-		width: 100%;
-	}
-
-	.welcome-image img {
-		border-radius: 0px;
+		display: none;
 	}
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 540px) and (max-width: 780px) {
+
 	.welcome-wrapper {
-		padding: 20px;
-	}
-
-	.welcome-text__content {
-		padding: 30px;
-		font-size: 17px;
-	}
-
-	.btn-welcome {
 		width: 100%;
-		box-shadow: -4px 8px 15px -26px #fff;
+		margin: initial;
+	}
+
+	.welcome-text {
+		padding: 14px;
+		border-radius: 0px;
 	}
 
 	.welcome-image {
-		min-height: 786px;
+		border-radius: 0px;
 	}
 }
