--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -39,6 +39,7 @@ ul.nav-content::before {
 	background-image: linear-gradient(to right top, #000, #551a8b, #551a8b, #ff3366);
 	-webkit-background-clip: text;
 	-moz-background-clip: text;
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
 	-moz-text-fill-color: transparent;
 }
@@ -180,7 +181,6 @@ ul.nav-content::before {
 	transition: transform .2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
-
 .favlist-sublinks__content {
 	position: relative;
 	width: 100%;
@@ -192,7 +192,6 @@ ul.nav-content::before {
 	width: 25%;
 	padding: 10px;
 }
-
 
 .favlisthover:hover .favlist-sublinks {
 	transform: scaleY(1);
@@ -284,7 +283,6 @@ ul.nav-content::before {
 		top: 7px;
 		left: 0px;
 		width: 100%;
-		border-bottom: 1px solid salmon;
 		background: #fff;
 	}
 
@@ -305,7 +303,7 @@ ul.nav-content::before {
 		top: 21px;
 		left: 10px;
 		color: salmon;
-		z-index: 99;
+		z-index: 999;
 	}
 
 	.hamburger {
@@ -340,32 +338,33 @@ ul.nav-content::before {
 		grid-gap: 0rem;
 		gap: 0rem;
 		overflow: hidden;
-		min-height: 350px;
+		min-height: 600px;
 		padding: 6px;
 		transition: width .3s, height .3s, opacity .1s;
-		box-shadow: -4px 8px 15px -12px #444;
+		box-shadow: none;
 		background-color: hsla(0, 0%, 100%, .98);
 		z-index: 999999;
 		border-radius: 10px;
 		opacity: 1;
-		background: linear-gradient(-45deg, #fff, lavender, whitesmoke, #f8e9e7);
-		background-size: 400% 400%;
+		background-size: 96% 104%;
+		background: linear-gradient(
+			-45deg
+			, #fff, #fff, #f5f5f5, #f8e9e7);
 		animation: gradient 5s ease infinite;
 	}
 
 	.favlist {
 		display: grid;
-		text-align: center;
-		align-items: center;
+		font-size: 18px;
+		padding: 10px 25px;
 	}
 
-	.favlist a {
-		margin: 14px 0;
-	}
 
 	.favlist-sublinks__content a {
-		width: 49%;
-		padding: initial;
+		width: 100%;
+		float: none;
+		display: flex;
+		padding: 0px 0px 10px;
 	}
 
 	.favlist-sublinks {
@@ -373,12 +372,14 @@ ul.nav-content::before {
 		top: 0px;
 		right: 0px;
 		width: 100%;
-		display: none;
+		transform: scaleY(1);
 		text-align: center;
+		box-shadow: none;
 	}
 
 	.fake-link {
-		margin: 15px;
+		margin: 3px 0px 15px;
+		text-align: justify;
 	}
 }
 
