--- a/src/styles/random.css
+++ b/src/styles/random.css
@@ -99,7 +99,7 @@
 	top: 310px;
 	left: 0px;
 	width: 100%;
-	font-family: 'Poppins', sans-serif;
+	font-family: inherit;
 	font-size: 17px;
 	margin-top: 5px;
 	line-height: 2rem;
