--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -84,12 +84,29 @@ ul.food-list__favcard {
 
 .food-list__poster {
 	width: 100%;
+	padding-bottom: 100%;
+	overflow: hidden;
 	display: block;
 	position: relative;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 }
 
+.food-list__poster img {
+	width: 100%;
+	min-height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.optional-image {
+	width: 100%;
+	min-height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
 
 .title-discover {
 	padding: 10px;
@@ -140,7 +157,7 @@ ul.food-list__favcard {
 }
 
 .btn-discover1:hover {
-	box-shadow: 0px 0px 5px #fff;	
+	box-shadow: 0px 0px 5px #fff;
 }
 
 .pagination {
@@ -211,7 +228,6 @@ ul.food-list__favcard {
 	text-align: center;
 }
 
-
 @media screen and (max-width: 540px) {
 	.randomgenerator-content h1 {
 		font-size: 28px;
@@ -272,6 +288,7 @@ ul.food-list__favcard {
 
 	.search-input__wrapper {
 		width: 95%;
+		height: calc(677px - 113px);
 		padding: 5px;
 		margin: auto;
 	}
