--- a/src/styles/showfoodqueries.css
+++ b/src/styles/showfoodqueries.css
@@ -1,5 +1,3 @@
-
-
 @media screen and (max-width: 540px) {
 	.ingredient-front__wrapper,
 	.category-latest__wrapper {
@@ -7,24 +5,8 @@
 		border-radius: 0px;
 	}
 
-	.ingredient-front__content {
-		justify-content: initial;
-	}
-
 	.thumbnailCard {
 		width: 90px;
-	}
-
-	.thumbnail-plate,
-	.thumbnail-plate1,
-	.thumbnail-plate2 {
-		height: 90px;
-		padding: 10px;
-	}
-
-	.thumbnail-plate1,
-	.thumbnail-plate2 {
-		height: 90px;
 	}
 
 	.latest-wrapper h1 {
@@ -51,7 +33,6 @@
 	.categorycoc-latest__wrapper h1 {
 		margin: 20px 0px 20px;
 	}
-
 
 	.category-front__wrapper h1 {
 		margin: 25px 0px 25px;
@@ -82,15 +63,13 @@
 		width: 100%;
 	}
 
-	.letest__content, .letest__content1 {
-		grid-gap: .2rem;
-	}
-
-
 	.latest-title__discover {
-		width: 75%;
 		text-align: center;
 		padding: 0px 10px;
+	}
+
+	.latest-list__card1 img {
+		height: 130px;
 	}
 
 	.load-ingredient,
@@ -185,6 +164,7 @@
 		margin-bottom: 0px;
 	}
 
+	
 	.video-wrapper {
 		padding-bottom: 73.25%;
 	}
@@ -196,15 +176,43 @@
 
 	.background-video__text {
 		top: -9%;
-		font-size: 35px;
+		/* font-size: 35px; */
 	}
 
 	.background-video__text1 {
 		top: 25%;
 		font-size: 35px;
 	}
-}
 
+	.background-video__wrapper {
+		width: 95%;
+		height: 85vh;
+		margin: 1px auto;
+	}
+
+	.background-video__content {
+		width: 100%;
+		padding-bottom: initial;
+		overflow: hidden;
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+	}
+
+	.background-video {
+		width: 100%;
+		min-height: 100%;
+		height: auto;
+		object-fit: cover;
+		object-position: bottom;
+	}
+
+	.background-video__overley {
+		position: initial;
+	}
+}
 
 @media screen and (min-width: 540px) and (max-width: 780px) {
 	.categorycoc-latest__wrapper {
@@ -308,6 +316,10 @@
 		margin: 20px 0px;
 		padding: initial;
 	}
+
+	.category-list__img img {
+		height: 28px;
+	}
 }
 
 @media screen and (min-width: 540px) and (max-width: 888px) {
@@ -316,4 +328,3 @@
 		margin: 0px;
 	}
 }
-
