--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -11,7 +11,7 @@
 .welcome-text {
 	width: 50%;
 	padding: 50px;
-	font-size: 20px;
+	font-size: 21px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -22,7 +22,6 @@
 	background-color: whitesmoke;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
 	text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
-	font-family: 'Roboto Slab', serif;
 	transition: all .3s;
 }
 
@@ -61,7 +60,7 @@
 	width: 100%;
 	font-family: inherit;
 	font-size: 18px;
-	font-weight: 500;
+	font-weight: 600;
 	background-color: transparent;
 	cursor: pointer;
 	margin-top: 50px;
@@ -105,13 +104,18 @@
 		position: relative;
 		width: 100%;
 		color: #000;
-		padding: 28px;
+		padding: 25px;
 		border-radius: 0px;
+		font-size: 25px;
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-image: url(../image/wel.jpg);
 		text-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
+	}
+
+	.welcome-text h1 {
+		margin: .1em;
 	}
 
 
@@ -130,6 +134,7 @@
 		font-size: 20px;
 		font-weight: 600;
 		text-shadow: none;
+		margin-top: initial;
 		z-index: 999;
 	}
 
