--- a/src/styles/showfood1.css
+++ b/src/styles/showfood1.css
@@ -18,9 +18,10 @@
 
 .category-front__wrapper {
 	position: relative;
-	width: 35%;
+	width: 100%;
 	padding: 10px;
 	border-radius: 10px;
+	background: lavender;
 	transition: all .3s;
 }
 
@@ -55,7 +56,7 @@
 }
 
 .latest__wrapper {
-	width: 63%;
+	width: 100%;
 	padding: 10px;
 	border-radius: 10px;
 }
@@ -70,10 +71,15 @@
 	transition: all .3s;
 }
 
+.letest__content{
+	justify-content: initial;
+}
+
 .latest-list__card {
 	position: relative;
-	width: 44%;
-	padding: 6px 0px 0px 6px;
+	width: 30%;
+	/* padding: 6px 0px 0px 6px; */
+	padding: 6px;
 	margin: 0px 10px 10px;
 	border-radius: 4px;
 	display: flex;
@@ -91,7 +97,7 @@
 	display: flex;
 	overflow: hidden;
 	margin: 0px 5px 5px 0px;
-	padding: 6px 0px 0px 6px;
+	padding: 6px;
 	box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 1px 2px rgb(0 0 0 / 23%);
 	transition: all .3s;
 	animation: verticalSlide .5s;
@@ -99,10 +105,13 @@
 
 .latest-list__card1 img {
 	width: 100%;
-	height: 141px;
-	border-radius: 4px;
-	object-fit: cover;
-	object-position: bottom;
+    min-height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 4px;
+    object-fit: contain;
+    object-position: center;
 }
 
 .latest-list__card:hover {
@@ -127,19 +136,22 @@
 }
 
 .latest-list__poster {
-	width: 40%;
-	min-height: 100%;
-	overflow: hidden;
-	display: block;
 	position: relative;
+	width: 40%;
+	padding-bottom: 40%;
+	overflow: hidden;
+	display: block;	
 }
 
 .latest-list__poster img {
 	width: 100%;
-	height: 100px;
-	object-fit: cover;
-	object-position: bottom;
+    min-height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
 	border-radius: 4px;
+	object-fit: contain;
+    object-position: center;
 }
 
 .latest-title__discover {
@@ -171,8 +183,9 @@
 }
 
 .category-list__card {
-	width: 47%;
+	width: 23%;
 	padding: 5px;
+	font-size: 18px;
 	font-family: 'Lora', sans-serif;
 	border: 1px solid;
 	cursor: pointer;
@@ -204,17 +217,20 @@
 	position: relative;
 	width: 50%;
 	border-radius: 50%;
+	overflow: hidden;
 	background-color: #fff;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-	overflow: hidden;
+	padding-bottom: 30%;
 }
 
 .category-list__img img {
+	position: absolute;
 	width: 100%;
-	height: 45px;
-	object-fit: cover;
-	object-position: bottom;
-	border-radius: 4px;
+    min-height: 100%;
+    left: 0;
+    top: 0;
+	object-fit: contain;
+    object-position: center;
 }
 
 .category-list__content {
@@ -273,7 +289,7 @@
 }
 
 .pop-card a {
-	display: inline-block;
+	display: inline-block; 
 	text-align: center;
 	margin: 10px;
 	width: 100%;
@@ -295,7 +311,7 @@
 	overflow: hidden;
 	border-radius: 0px 0px 20px 20px;
 	display: inline-block;
-	transition: all .3s;
+	transition: all .3s; 
 }
 
 .pop-card__imgwrapper img {
@@ -303,7 +319,15 @@
 	height: 200px;
 	transform: skew(0deg, -15deg);
 	margin: -20px 0px 0px -24px;
-	transition: all .3s;
+	transition: all .3s; 
+}
+
+.pop-card__skew img {
+	width: 200px;
+	height: 200px;
+	transform: skew(0deg, -15deg);
+	margin: -20px 0px 0px -24px;
+	transition: all .3s; 
 }
 
 .pop-card__skew {
@@ -317,7 +341,7 @@
 	margin: 20px 0px 0px 0px;
 	transform: skew(0deg, 15deg);
 	font-size: 0px;
-	transition: all .3s;
+	transition: all .3s; 
 }
 
 .pop-card__text {
